[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemctl = "0.3.1"
docker-api = "0.14"
flate2 = "1.0.28"
serde = "1.0.198"
serde_json = "1.0"
ssh2 = "0.9.4"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
zip = "1.2.3"
